# ChipletPart

./: CMakeLists.txt  README.md  constructChip.py  design.py  generateMempoolSystemDefinition.py  get_embedding.py  load_and_test_design.py  readDesignFromFile.py  run_case_studies.sh  run_chiplet_test.sh
graph_part/: CMakeLists.txt
graph_part/src/: ChipletPart.cpp  ChipletPart.h  FMRefiner.cpp  FMRefiner.h  Hypergraph.cpp  Hypergraph.h  Main.cpp  PriorityQueue.cpp  PriorityQueue.h  Utilities.cpp  Utilities.h  floorplan.cpp  floorplan.h
graph_part/test/: CMakeLists.txt  assembly_process_definitions.xml  block_definitions_4_14_4_400_1.txt  block_level_netlist_4_14_4_400_1.hgr  dbg_netlist.txt  dbg_ptn.txt  example.cpp  gpmetis  hmetis  io_definitions.xml  layer_definitions.xml  metis_graph.txt  metis_graph.txt.part.16  metis_graph.txt.part.2  metis_graph.txt.part.32  metis_graph.txt.part.5  metis_graph.txt.part.6  metis_graph.txt.part.7  metis_graph.txt.part.8  part.0.txt  part.1.txt  part.2.txt  part.3.txt  part.4.txt  part.5.txt  part.6.txt  part.7.txt  part.9.txt  partition_0.txt  quick_test.sh  run.sh  run_hmetis.sh  run_openroad_16.tcl  run_openroad_2.tcl  run_openroad_3.tcl  run_openroad_4.tcl  run_openroad_8.tcl  run_single_triton.sh  run_triton_part.sh  tech_assignment.chipletpart.parts.3  (+5 more)
graph_part/testcases/: tree.txt
graph_part/testcases/1_4_14_4_400_1/: block_definitions_ws-1_4_14_4_400_1.txt  block_level_netlist_ws-1_4_14_4_400_1.hgr  block_level_netlist_ws-1_4_14_4_400_1.hgr.map  block_level_netlist_ws-1_4_14_4_400_1.xml
graph_part/testcases/3_4_14_4_400_1/: block_definitions_ws-3_4_14_4_400_1.txt  block_level_netlist_ws-3_4_14_4_400_1.hgr  block_level_netlist_ws-3_4_14_4_400_1.hgr.backup  block_level_netlist_ws-3_4_14_4_400_1.hgr.map  block_level_netlist_ws-3_4_14_4_400_1.xml  layer_definitions.xml  xml_to_hypergraph.py
graph_part/testcases/48_1_14_4_1600_1600/: block_definitions_ws-48_1_14_4_1600_1600.txt  block_level_netlist_ws-48_1_14_4_1600_1600.hgr  block_level_netlist_ws-48_1_14_4_1600_1600.hgr.backup  block_level_netlist_ws-48_1_14_4_1600_1600.xml  block_level_netlist_ws-48_1_14_4_1600_1600_hmetis.hgr  block_level_netlist_ws-48_1_14_4_1600_1600_hmetis.hgr.part.2  block_level_netlist_ws-48_1_14_4_1600_1600_hmetis.hgr.seed.1.part.2  block_level_netlist_ws-48_1_14_4_1600_1600_hmetis.hgr.seed.1.part.3  block_level_netlist_ws-48_1_14_4_1600_1600_hmetis.hgr.seed.1.part.4  block_level_netlist_ws-48_1_14_4_1600_1600_hmetis.hgr.seed.2.part.16  block_level_netlist_ws-48_1_14_4_1600_1600_hmetis.hgr.seed.2.part.2  (+16 more)
(+152 files in other folders)
